# dream_palace

./: .env.example  .funcignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  azure.yaml  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
docs/: AZURE_MIGRATION.md  DEVELOPMENT_PLAN.md
hosted_agent/: main.py  requirements.txt
infra/: main.tf  outputs.tf  variables.tf  versions.tf
scripts/: migrate_gcp_to_azure.py
src/dream_palace/: __init__.py  adk_app.py  agents.py  app.py  config.py  storage.py  webhook.py
src/dream_palace/adapters/: __init__.py
src/dream_palace/adapters/database/: __init__.py  base.py
src/dream_palace/adapters/llm/: base.py
src/dream_palace/agents/: __init__.py  agent.py  analysing_agent.py  intent_recognition_agent.py  orchestrator.py
src/dream_palace/agents/prompts/: __init__.py  analyst.py  orchestrator.py
src/dream_palace/bots/: clerk.py  dreamer.py
src/dream_palace/interface/: __init__.py
src/dream_palace/interface/telegram/: __init__.py  bot.py  clerk.py  dreamer.py  webhook.py
src/dream_palace/interface/webapp/: __init__.py  api.py  auth.py
src/dream_palace/interface/webapp/static/: index.html
src/dream_palace/service/: __init__.py  dream_service.py  telegram_client.py
src/dream_palace/shared/: __init__.py  config.py  domain.py
src/dream_palace/tools/: __init__.py  dream_store.py
tests/: test_adapters.py  test_azure_dream_store.py  test_dream_service.py  test_orchestrator.py  test_prompt.py  test_webapp_auth.py
