[project]
name = "dream-palace"
version = "0.1.0"
description = "Telegram-first private dream journal powered by Google ADK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["fastapi>=0.115,<1", "firebase-admin>=6.5,<8", "google-adk>=1.0,<2", "google-cloud-storage>=2.18,<4", "pydantic-settings>=2.5,<3", "python-telegram-bot>=21.6,<23", "uvicorn>=0.30,<1"]

[dependency-groups]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.8,<1"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dream_palace"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
