[project]
name = "dream-palace"
version = "0.1.0"
description = "Telegram-first private dream journal on Azure and Microsoft Foundry"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-projects>=2.2,<3",
    "azure-cosmos>=4.9,<5",
    "azure-functions>=1.21,<2",
    "azure-identity>=1.20,<2",
    "azure-storage-blob>=12.25,<13",
    "fastapi>=0.115,<1",
    "pydantic-settings>=2.5,<3",
    "python-telegram-bot>=21.6,<23",
    "uvicorn>=0.30,<1",
]

[dependency-groups]
dev = ["pytest>=8.3,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.8,<1"]
migration = ["firebase-admin>=6.5,<8", "google-cloud-storage>=2.18,<4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dream_palace"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
